animaciones del carrito

--- a/Carrito.html
+++ b/Carrito.html
@@ -67,11 +67,7 @@
                                         <div class="card-body">
                                             <div class="d-flex justify-content-between">
                                                 <div class="d-flex flex-row align-items-center">
-                                                    <div>
-                                                        <img style="width: 170px;"
-                                                            src="https://github.com/Nahir13/Ecommerce/blob/main/img/sw4%201.jpg?raw=true"
-                                                            class="img-fluid rounded-3" alt="Shopping item">
-                                                    </div>
+                                                    <div class="carrito-SW4"></div>
                                                     <div class="ms-3">
                                                         <h5>SW4 Diamond</h5>
                                                         <p class="small mb-0 text-secondary">Color: Blanco</p>
@@ -94,11 +90,7 @@
                                         <div class="card-body">
                                             <div class="d-flex justify-content-between">
                                                 <div class="d-flex flex-row align-items-center">
-                                                    <div>
-                                                        <img style="width: 170px;"
-                                                            src="https://github.com/Nahir13/Ecommerce/blob/main/img/subaro%201.jpg?raw=true"
-                                                            class="img-fluid rounded-3" alt="Shopping item">
-                                                    </div>
+                                                    <div class="carrito-forester"></div>
                                                     <div class="ms-3">
                                                         <h5>Subaru Forester</h5>
                                                         <p class="small mb-0 text-secondary">Color: Gris</p>
@@ -121,11 +113,7 @@
                                         <div class="card-body">
                                             <div class="d-flex justify-content-between">
                                                 <div class="d-flex flex-row align-items-center">
-                                                    <div>
-                                                        <img src="https://github.com/Nahir13/Ecommerce/blob/main/img/hilux%201.jpg?raw=true"
-                                                            class="img-fluid rounded-3" width="170px"
-                                                            alt="Shopping item">
-                                                    </div>
+                                                    <div class="carrito-hilux"></div>
                                                     <div class="ms-3">
                                                         <h5>Toyota Hilux</h5>
                                                         <p class="small mb-0 text-secondary">Color: Gris</p>
@@ -148,11 +136,7 @@
                                         <div class="card-body">
                                             <div class="d-flex justify-content-between">
                                                 <div class="d-flex flex-row align-items-center">
-                                                    <div>
-                                                        <img src="https://github.com/Nahir13/Ecommerce/blob/main/img/civic%201.jpg?raw=true"
-                                                            class="img-fluid rounded-3" width="170px" h
-                                                            alt="Shopping item">
-                                                    </div>
+                                                    <div class="carrito-civic"></div>
                                                     <div class="ms-3">
                                                         <h5>Honda Civic</h5>
                                                         <p class="small mb-0 text-secondary">Color: Blanco</p>
