--- a/Carrito.html
+++ b/Carrito.html
@@ -63,7 +63,7 @@
                                                     <i class="fas fa-angle-down mt-1"></i></a></p>
                                         </div>
                                     </div>
-                                    <div class="card mb-3" style="width: 95%; height: 15%;">
+                                    <div class="card mb-3" style="width: 95%; height: 18%;">
                                         <div class="card-body">
                                             <div class="d-flex justify-content-between">
                                                 <div class="d-flex flex-row align-items-center">
@@ -90,10 +90,10 @@
                                         <div class="card-body">
                                             <div class="d-flex justify-content-between">
                                                 <div class="d-flex flex-row align-items-center">
-                                                    <div class="carrito-forester"></div>
+                                                    <div class="carrito-yaris"></div>
                                                     <div class="ms-3">
-                                                        <h5>Subaru Forester</h5>
-                                                        <p class="small mb-0 text-secondary">Color: Gris</p>
+                                                        <h5>Yaris Hatchback</h5>
+                                                        <p class="small mb-0 text-secondary">Color: Rojo</p>
                                                     </div>
                                                 </div>
                                                 <div class="d-flex flex-row align-items-center">
@@ -101,7 +101,7 @@
                                                         <h5 class="fw-normal mb-0">1</h5>
                                                     </div>
                                                     <div style="width: 80px;">
-                                                        <h5 class="mb-0">USD 39.900</h5>
+                                                        <h5 class="mb-0">USD 21.560</h5>
                                                     </div>
                                                     <a href="#!" style="color: #cecece;"><i
                                                             class="fas fa-trash-alt"></i></a>
@@ -132,7 +132,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="card mb-3 mb-lg-0" style="width: 95%; height: 20%;">
+                                    <div class="card mb-3 mb-lg-0" style="width: 95%; height: 18%;">
                                         <div class="card-body">
                                             <div class="d-flex justify-content-between">
                                                 <div class="d-flex flex-row align-items-center">
@@ -157,7 +157,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-5 w-25">
-                                    <div class="card bg-dark text-white rounded-3 my-5 d-flex" style="width: 170%;">
+                                    <div class="card bg-dark text-white rounded-3 my-5 d-flex" style="width: 170%; height: auto;">
                                         <div class="card-body">
                                             <div class="d-flex justify-content-between align-items-center mb-4">
                                                 <h5 class="mb-0">Detalles de la compra</h5>
